# iptvportal-py

./: .env.example  .gitignore  README.md  pyproject.toml  pytest.ini
.github/: copilot-instructions.md
src/iptvportal/: __init__.py  asyncclient.py  auth.py  client.py  config.py  exceptions.py
src/iptvportal/cli/: __init__.py  auth.py  main.py
src/iptvportal/query/: __init__.py  builder.py  operators.py
src/iptvportal/transport/: __init__.py  http.py
tests/: conftest.py  test_auth.py
tests/integration/: test_media.py
tests/unit/: test_config.py  test_query_builder.py
