[project]
name = "iptvportal-py"
version = "0.1.0"
description = "Modern SDK for IPTVPortal JSONSQL API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
keywords = ["iptv", "iptvportal", "api", "client", "middleware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Multimedia :: Video"
]
dependencies = [
    "httpx[http2] ~= 0.27.0",
    "pydantic ~= 2.9.0",
    "pydantic-settings ~= 2.5.0",
    "typer[all] ~= 0.12.0",
    "rich ~= 13.9.0",
    "python-dotenv ~= 1.0.0"
]
[project.optional-dependencies]
dev = [
    "pytest ~= 8.3.0",
    "pytest-asyncio ~= 0.24.0",
    "pytest-cov ~= 5.0.0",
    "pytest-mock ~= 3.14.0",
    "mypy ~= 1.11.0",
    "ruff ~= 0.6.0",
    "pre-commit ~= 3.8.0"
]
docs = [
    "mkdocs ~= 1.6.0",
    "mkdocs-material ~= 9.5.0",
    "mkdocstrings[python] ~= 0.25.0"
]
[project.urls]
Homepage = "https://github.com/pv-udpv/iptvportal-py"
Documentation = "https://iptvportal-py.readthedocs.io"
Repository = "https://github.com/pv-udpv/iptvportal-py"
Issues = "https://github.com/pv-udpv/iptvportal-py/issues"
[project.scripts]
iptvportal = "iptvportal.cli.app:app"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[tool.uv]
dev-dependencies = [
    "ipython ~= 8.27.0"
]
[tool.ruff]
line-length = 100
target-version = "py312"
lint.select = ["E", "F", "I", "N", "W", "UP", "ANN", "B", "A", "C4", "DTZ", "T10", "RET", "SIM"]
lint.ignore = ["ANN101", "ANN102"]
[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = ["--strict-markers", "--cov=iptvportal", "--cov-report=term-missing", "--cov-report=html"]

[tool.iptvportal.install]
userspace_dirs = ["~/.config/iptvportal", "~/.local/share/iptvportal", "~/.cache/iptvportal", "~/.local/log/iptvportal"]
system_dirs = ["/etc/iptvportal", "/var/lib/iptvportal", "/var/log/iptvportal"]
